Fixed spacing

--- a/daprdocs/assets/scss/_sidebar-tree.scss
+++ b/daprdocs/assets/scss/_sidebar-tree.scss
@@ -85,7 +85,7 @@
 
     & > .td-sidebar-nav__section {
         padding-top: .5rem;
-        padding-left: 1.5rem;
+        padding-left: 0rem;
     }
 }
 
